update freelancer link

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@ Driven by a love of games, I'm constantly seeking to push the boundaries of what
 
             <a
             class="btn btn-xl btn-light"
-            href="https://www.freelancer.com/u/lugiro"
+            href="https://www.freelancer.com/hireme/lugiro"
           >
             Hire Me at Freelancer!           </a>
         </div>
