update upwork link

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ Driven by a love of games, I'm constantly seeking to push the boundaries of what
         <div class="text-center mt-4">
           <a
             class="btn btn-xl btn-light"
-            href="https://www.upwork.com/freelancers/glucas"
+            href="https://www.upwork.com/signup/create-account/client_contact_freelancer?ciphertext=~01cc24f9ec23e2fdab&BYOC"
           >
             Hire Me at Upwork!           </a>
 
