--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Lukas Make Games - Freelancer</title>
+    <title>Lukas Indie - Freelancer</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
@@ -37,7 +37,7 @@
       id="mainNav"
     >
       <div class="container">
-        <a class="navbar-brand" href="#page-top">Lukas Make Games</a>
+        <a class="navbar-brand" href="#page-top">Lukas Indie</a>
         <button
           class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded"
           type="button"
@@ -77,14 +77,14 @@
         <!-- Masthead Avatar Image-->
         <div class="rounded-circle overflow-hidden">
           <img
-            class="masthead-avatar mb-5"
-            src="assets/img/avataaars.svg"
+            class="masthead-avatar"
+            src="assets/img/profile.png"
             alt="..."
           />
         </div>
 
         <!-- Masthead Heading-->
-        <h1 class="masthead-heading text-uppercase mb-0">Lukas Make Games</h1>
+        <h1 class="masthead-heading text-uppercase mt-5">Lukas Indie</h1>
         <!-- Icon Divider-->
         <div class="divider-custom divider-light">
           <div class="divider-custom-line"></div>
@@ -337,7 +337,7 @@ Driven by a love of games, I'm constantly seeking to push the boundaries of what
           <!-- Footer Social Icons-->
           <div class="col-lg-4 mb-5 mb-lg-0">
             <h4 class="text-uppercase mb-4">Around the Web</h4>
-            <a class="btn btn-outline-light btn-social mx-1" href="https://lukasmakegames.itch.io/"
+            <a class="btn btn-outline-light btn-social mx-1" href="https://lukasindie.itch.io/"
               >itch</a>
             <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/lucas-g-877950294/"
               ><i class="fab fa-fw fa-linkedin-in"></i
@@ -345,7 +345,7 @@ Driven by a love of games, I'm constantly seeking to push the boundaries of what
           </div>
           <!-- Footer About Text-->
           <div class="col-lg-4">
-            <h4 class="text-uppercase mb-4">About Lukas Make Games</h4>
+            <h4 class="text-uppercase mb-4">About Lukas Indie</h4>
             <p class="lead mb-0">
               Personal portfolio.
             </p>
@@ -356,7 +356,7 @@ Driven by a love of games, I'm constantly seeking to push the boundaries of what
     <!-- Copyright Section-->
     <div class="copyright py-4 text-center text-white">
       <div class="container">
-        <small>Copyright &copy; Lukas Make Games 2024</small>
+        <small>Copyright &copy; Lukas Indie 2024</small>
       </div>
     </div>
     <!-- Portfolio Modals-->
